force-app/main/default/objects/FulfillmentOrderItem__c/FulfillmentOrderItem__c.object-meta.xml
<CustomObject>
    <label>납품서 상세</label>
    <nameField>
        <label>Item Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>