force-app/main/default/objects/FulfillmentOrderItem__c/fields/FulfillmentOrderID__c.field-meta.xml
<CustomField>
    <fullName>FulfillmentOrderID__c</fullName>
    <label>Fulfillment Order ID</label>
    <referenceTo>FulfillmentOrder__c</referenceTo>
    <relationshipLabel>Fulfillment Order Item</relationshipLabel>
    <relationshipName>Fulfillment_Order_Item</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>