force-app/main/default/objects/FulfillmentOrderItem__c/fields/LineSubtotal__c.field-meta.xml
<CustomField>
    <fullName>LineSubtotal__c</fullName>
    <formula>Quantity__c * UnitPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>