force-app/main/default/objects/FulfillmentOrderItem__c/fields/OrderproductID__c.field-meta.xml
<CustomField>
    <fullName>OrderproductID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order product ID</label>
    <referenceTo>GfOrderItem__c</referenceTo>
    <relationshipLabel>Fulfillment Order Item</relationshipLabel>
    <relationshipName>Fulfillment_Order_Item</relationshipName>
    <type>Lookup</type>
</CustomField>