force-app/main/default/objects/FulfillmentOrderItem__c/fields/OriginalQuantity__c.field-meta.xml
<CustomField>
    <fullName>OriginalQuantity__c</fullName>
    <label>Quantity on the Original Order</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>