force-app/main/default/objects/FulfillmentOrderItem__c/fields/ProductID__c.field-meta.xml
<CustomField>
    <fullName>ProductID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product ID</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Fulfillment Order Item</relationshipLabel>
    <relationshipName>Fulfillment_Order_Item</relationshipName>
    <type>Lookup</type>
</CustomField>