force-app/main/default/objects/FulfillmentOrderItem__c/fields/RejectedQuantity__c.field-meta.xml
<CustomField>
    <fullName>RejectedQuantity__c</fullName>
    <label>Rejected Quantity</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>