force-app/main/default/objects/FulfillmentOrderItem__c/fields/RejectReason__c.field-meta.xml
<CustomField>
    <fullName>RejectReason__c</fullName>
    <label>Reject Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>손상됨</fullName>
            </value>
            <value>
                <fullName>판매완료</fullName>
            </value>
            <value>
                <fullName>포장 상품 부족</fullName>
            </value>
            <value>
                <fullName>재고 부족</fullName>
            </value>
            <value>
                <fullName>기타</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>