force-app/main/default/objects/FulfillmentOrderItem__c/fields/ReshipReason__c.field-meta.xml
<CustomField>
    <fullName>ReshipReason__c</fullName>
    <label>Reship Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>알수없음</fullName>
            </value>
            <value>
                <fullName>손상됨</fullName>
            </value>
            <value>
                <fullName>손실</fullName>
            </value>
            <value>
                <fullName>잘못된 항목</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>