force-app/main/default/objects/FulfillmentOrderItem__c/fields/ServiceStartDate__c.field-meta.xml
<CustomField>
    <fullName>ServiceStartDate__c</fullName>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>